# consultaApp

./: .gitignore  MEJORAS_VISUAL_ESTUDIOS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
src/consultorio/: __main__.py  app.py  config.py
src/consultorio/db/: backup.py  connection.py  schema.py
src/consultorio/domain/: models.py  rules.py
src/consultorio/repos/: patients.py  studies.py  visits.py
src/consultorio/services/: reporting.py
src/consultorio/ui/: events.py  main_window.py
src/consultorio/ui/views/: patients.py  studies_admin.py  today.py
src/consultorio/ui/widgets/: common.py
src/consultorio/ui/windows/: edit_result.py  new_visit.py
tests/: test_patients_repo.py  test_rules.py  test_studies_repo.py  test_visits_crud.py
